--- a/style.css
+++ b/style.css
@@ -327,7 +327,6 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: 50px;
     float: right;
     z-index: 1;
 }
@@ -519,7 +518,7 @@ button {
     border-radius: 0 0 29px 29px;
 }
 
-.form-control {
+control {
     border-color: rgba(0, 0, 0, .1);
     box-shadow: none;
 }
@@ -692,7 +691,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 15px;
 }
 
 .tight-width-whitespace {
@@ -715,9 +714,25 @@ p {
     font-weight: 700;
 }
 
+
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media all and (max-width: 768px){
+    .social{
+        justify-content: space-around;
+    }
+}
+
+
+.title-footer{
+    font-size: 1.2em;
+    padding-left: 40px;
 }
 
 h2 {
@@ -922,7 +937,6 @@ h4 {
 .txt p{
     font-size: 1.2em;
 }
-]
 
 @media (max-width: 767px) {
     .page-container {
