--- a/style.css
+++ b/style.css
@@ -695,7 +695,7 @@ p {
 }
 
 .tight-width-whitespace {
-    max-width: 90%;
+    max-width: 600px;
     margin: auto auto auto auto;
     text-align: center;
 }
@@ -719,20 +719,18 @@ p {
     max-width: 400px;
     margin: auto auto auto auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 @media all and (max-width: 768px){
     .social{
         justify-content: space-around;
+        padding-right: 15px;
     }
 }
 
 
 .title-footer{
     font-size: 1.2em;
-    padding-left: 40px;
 }
 
 h2 {
@@ -816,6 +814,7 @@ h4 {
 
 .color{
     color: yellow;
+    font-size: 1.5em;
 }
 
 .contact{
@@ -1088,4 +1087,8 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+
+.row-footer{
+    margin-left: 0;
 }
