--- a/style.css
+++ b/style.css
@@ -721,6 +721,7 @@ p {
     max-width: 400px;
     margin: auto auto auto auto;
     display: flex;
+    justify-content: center;
 }
 
 @media all and (max-width: 768px){
